2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Fix non-update of display when changing video frame type (2D,
	3D left/right etc.)

	* Restore video information in video tab when using still images.

	* Hopefully fix exception on new film in some strange cases.

2013-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.42 released.

2013-12-09  Carl Hetherington  <cth@carlh.net>

	* Fix make_black for pixel format 7 (#288).

2013-12-08  Carl Hetherington  <cth@carlh.net>

	* Fix display update when removing content (#281).

2013-12-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.41 released.

2013-12-05  Carl Hetherington  <cth@carlh.net>

	* Improve the correctness of lengths reported by sound files to fix
	short DCPs when using non-DCI-rate sound files with stills.

2013-12-04  Carl Hetherington  <cth@carlh.net>

	* Make signatures optional (#273).

	* Only do scale/crop/window/subtitle overlay if a frame is going
	to be encoded for the DCP.

	* Several optimisations to video processing, which should
	speed up the player a bit.

2013-12-03  Carl Hetherington  <cth@carlh.net>

	* Add "play length" control to avoid having to do arithmetic to
	get end-trims right in some cases (#261).

2013-12-02  Carl Hetherington  <cth@carlh.net>

	* Fix breakage to adding multiple files at the same time.

	* Fix crash on double-click of "show audio" button (#278).

	* Version 1.40 released.

2013-12-02  Carl Hetherington  <cth@carlh.net>

	* Fix problems with FFmpeg files that have all-zero stream IDs.

	* Fix crash on checking non-existing frame info
	files.

	* Fix erroneous disabling of timing panel with
	audio-only sources.

2013-11-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.39 released.

2013-11-30  Carl Hetherington  <cth@carlh.net>

	* Fix windows build.

2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.38 released.

2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Add option to join input files together